# FungalMorphoSpace

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_integrated_validation.py
LICENSES/: CC-BY-NC-4.0.txt  COMMERCIAL_TEMPLATE.md
config/: turing_params.yaml
data/: species_data.json
data/_archive/: species_data.json.old
docs/: API.md  ESTRATEGIA_TESIS.md  EXAMPLES.md  OUTPUT_CONTRACT.md  REVISION_BIBLIOGRAFICA_P2.md
docs/archive/: ANALISIS_CRITICO_ROADMAP.md  CALIBRACION_BRUMALIS_TUNING_JOURNEY.md  CHANGELOG_FIXED_v4_to_PATCHED_v4_3.md  DATOS_BIOFISICOS_REALES.md  GUIA_COMPLETA_PROYECTO.md  GUIA_EXPERIMENTOS_BLINDAJE.md  HOJA_DE_RUTA.md  INFORME_ANALISIS_BIOFISICO_CORE.md  INFORME_CONTEXTO_PROBLEMAS_RESUELTOS.md  INFORME_CONTEXTO_TECNICO.md  INFORME_TECNICO_TESIS.md  METODOS_TESIS.md  README.md  RUTAS_ANCLAJE_NO_TAUTOLOGICO.md  TESTS_MINIMOS.md  TEST_PLAN_IDEAL.md
paper/: COVER_LETTER.md  OUTLINE_SOFTWARE_PAPER.md  README.md  main.tex  references.bib
scripts/: clean_dev_artifacts.py  confirm_three_node.py  demo_graded_scaffold.py  explore_three_node.py  figure_scale_law.py  plot_scaling_law.py  run_integrated_validation.py  run_parallel_validation.py  run_robustness_analysis.py  search_turing_topology.py  smoke_test.py  smoke_test.sh  test_imports.py  test_laminillas.py
tests/: test_output_contract_doc.py  test_output_contract_docs.py  test_output_contract_schema_sync.py  test_pkg_imports.py  test_three_node_solver.py  test_topology_analyzer_smoke.py
(+18 files in other folders)
