[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungalmorphospace"
version = "0.7.3.post6"
description = "Reaction–diffusion morphospace simulator and analysis tools for fungal hymenophores"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Mario Ahumada Durán" }
]
maintainers = [
  { name = "Mario Ahumada Durán" }
]
license = { text = "CC-BY-NC-4.0 (Academic) / Commercial (Contact author)" }
keywords = ["fungi", "morphogenesis", "reaction-diffusion", "turing", "topology", "biomaterials", "polypores", "hymenophore"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Physics",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "matplotlib>=3.4.0",
  "pandas>=1.3.0",
  "scikit-image>=0.18.0",
  "pyyaml>=6.0",
  "tqdm>=4.62.0",
]

[project.scripts]
fungalmorphospace-sim = "fungalmorphospace.core.turing_simulator:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fungalmorphospace*"]
